made a fix in the documentation
also updated the gitIgnore
