# api/docs/swagger.yaml
@@ -212,22 +212,6 @@ paths:
       summary: Get user profile
       tags:
       - user
-  /reset-password:
-    post:
-      consumes:
-      - application/json
-      description: Reset a user's password
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Password reset not available yet...
-          schema:
-            $ref: '#/definitions/models.Response'
-      summary: Reset a user's password
-      tags:
-      - auth
-  /update:
     put:
       consumes:
       - application/json
@@ -253,4 +237,19 @@ paths:
       summary: Update user profile
       tags:
       - user
+  /reset-password:
+    post:
+      consumes:
+      - application/json
+      description: Reset a user's password
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Password reset not available yet...
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Reset a user's password
+      tags:
+      - auth
 swagger: "2.0"
